--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "^0.19.9"
   },
   "devDependencies": {
